src/index.css
#root {
  margin: 0;
  font-family: 
    'Inter',
    -apple-system,
    BlinkMacSystemFont,
    'Segoe UI',
    'Roboto',
    'Oxygen',
    'Ubuntu',
    'Cantarell',
    'Fira Sans',
    'Droid Sans',
    'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background-color: #E5E5E5;
}

code {
  font-family: 
    'Inter',
    source-code-pro,
    Menlo,
    Monaco,
    Consolas,
    'Courier New',
    monospace;
}

/* Navbar elements */

#nav-links {
  z-index: 5;
  position: fixed;
  background-color: #3e3c3c;
  font-weight: bold;
  font-size: 1.25em;
  height: 50px;
}

.fas {
  cursor: pointer;
}

.padding-top-base {
  padding-top: 50px;
}

.nav-clicked {
  color: #6F6C6B;
}

.list-nav {
  list-style-type: none;
  margin: 0;
  padding-right: 5%;
}

.nav-expanded {
  position: fixed;
  right: 0;
  width: 100vw;
  height: 100vh;
  background-color: #3e3c3c
}

.item-drop {
  font-weight: bold;
  font-size: 1.5em;
  width: 75%;
  text-align: center;
  padding: 1em 0;
  border-bottom: 1px solid #6F6C6B;
}

.item-drop a {
  text-decoration: none;
}

.item-drop a:hover {
  text-decoration: none;
}

.width-big {
  height: 900px;
}

.nav-name {
  font-size: 1.25em;
}

.list-fullscreen {
  width: 400px;
}

/* Header elements */

.header-container {
  background-color: #1C1A19;
  color: white;
}

.grey-color {
  color: #CFCFCF;
}

.grey-color:hover {
  color: #a7a4a4;
}

.list-header {
  font-size: 2em;
}

.header-left-desktop {
  margin-left: 100px;
}

.max-info-header {
  min-width: 288px;
  max-width: 380px;
}

.max-info-header h1 {
  color: #F55800;
  font-family: 'Crete Round';
  font-weight: 400;
}

.max-info-header h4,
.max-info-header p {
  font-family: 'Inter';
}

.bg-header-img {
  background-repeat: no-repeat;
  background-position: right;
  width: 50vw;
  height: 100vh;
}

.h-600 {
  height: 600px;
}

.bg-header-img-mobile {
  background-repeat: no-repeat;
  background-position: right -180px bottom -80px;
  background-size: 400px 375px;
}

@media (max-width: 1050px) {
  .bg-header-img {
    background-position: left -100px bottom -50px;
    width: 20vw;
    height: 70vh;
  }
}

/* Project Elements */

.h3-project {
  color: #091E42;
}

.text-highlight {
  color: #091E42;
  font-size: 1.5em;
}

.vw-90 {
  width: 90vw;
}

.line-separator {
  width: 100%;
  height: 1px;
  position: relative;
  bottom: -17px;
  border-bottom: 1px solid #212121;
}

.w-55 {
  width: 55%;
}

.w-45 {
  width: 45%;
}

.img-desktop {
  max-width: 80%;
  min-height: 170px;
}

.img-phone {
  max-width: 20%;
  margin-left: -8%;
  min-height: 100px;
}

.tech-square {
  border: solid 1px #8993A4;
}

.tech-square-2 {
  background-color: #686766;
  color: white;

}

.button-square {
  font-size: 1.15em;
  color: white;
  background-color: #F55800;
  border: solid 1px #F55800;        
  user-select: none;
  -moz-user-select: none;
  -khtml-user-select: none;
  -webkit-user-select: none;
  -o-user-select: none;
}

.button-square:hover {
  color: #F55800;
  background-color: #FFF5E1;
  border: solid 1px #F55800;
  cursor: pointer; 
}

.button-square svg:hover {
  fill: #F55800;
}

.button-square:active {
  color: white;
  background-color: #E05304;
}

.cards-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.project-card {
  display: flex;
  flex-direction: column;
  min-height: 300px;
  width: 100%;
  height: auto;
  min-width: 250px;
  color: white;
  padding-top: 50%;
  text-decoration: none;
  background: linear-gradient(179.35deg, rgba(38, 38, 38, 0) 0.85%, rgba(38, 38, 38, 0.9) 84%);
}

.project-wrapper:hover {
  border: 1px solid black;
  background: none;
}

.project-wrapper:hover .project-card {
  background: none;
}

.project-card-phone {
  display: flex;
  flex-direction: column;
  width: 18vw;
  height: calc(18vw*1.2);
  min-width: 90vw;
  min-height: 300px;
  color: white;
  text-decoration: none;
  background: linear-gradient(179.35deg, rgba(38, 38, 38, 0) 0.85%, rgba(38, 38, 38, 0.9) 84%);
}

.project-wrapper {
  position: relative;
  overflow: hidden;
  display: flex;
  align-items: center;
  flex-grow: 1;
  width: 30%;
}

.project-wrapper .project-card,
.project-wrapper .project-card-phone {
  position: relative;
  z-index: 2;
}

.project-wrapper .img-dsk {
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  vertical-align: middle;
  width: auto;
  opacity: 0.6;
}

.project-wrapper .img-dsk-hor {
  position: absolute;
  left: 0;
  top: 0;
  height: auto;
  vertical-align: middle;
  width: 100%;
  opacity: 0.6;
}

.project-wrapper .img-phone-pj {
  position: absolute;
  left: 0;
  top: 0;
  height: auto;
  width: 100%;
  opacity: 0.6;
}

.project-wrapper:hover .img-dsk,
.project-wrapper:hover .img-dsk-hor {
  opacity: 1;
}

@media (max-width: 1550px) {
  .text-highlight {
    font-size: 1.25em;
  }
}

@media (max-width: 1250px) {
  .text-highlight {
    font-size: 1em;
  }
  .project-card {
    padding-top: 0;
  }
  .project-card {
    width: 100%;
    height: auto;
  }
  .project-wrapper .img-dsk,
  .project-wrapper:hover .img-dsk-hor {
    width: auto;
    height: 100%;
  }
}

@media (max-width: 950px) {
  .text-highlight {
    font-size: 0.8em;
  }
  .project-wrapper {
    width: 35%;
  }
}

@media (max-width: 750px) {
  .text-highlight {
    font-size: 0.65em;
  }
  .project-wrapper {
    width: fit-content;
  }
  .project-card,
  .project-wrapper .img-dsk,
  .project-wrapper:hover .img-dsk-hor {
    width: 100%;
    height: auto;
  }
}

/* modal elements */

.blur {
  filter: blur(5px);
}

.modal1 {
  z-index: 10;
  position: fixed;
  top: 0;
  left: 0;
  width:100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.6);
}

.modal-main {
  position:fixed;
  background: white;
  width: 85%;
  max-height: 90vh;
  max-width: 1000px;
  top:50%;
  left:50%;
  transform: translate(-50%,-50%);
  overflow-y: auto;
}

.modal-main-phone {
  position:fixed;
  background: white;
  width: 95%;
  height: auto;
  top:50%;
  left:50%;
  transform: translate(-50%,-50%);
  overflow-y: auto;
}

.max-img-height {
  max-height: 65vh;
}

.max-img-height-small {
  height: 100%;
}

.display-block {
  display: block;
}

.display-none {
  display: none;
}

.modal-title {
  color: #172B4D;
}

.modal-info {
  color: #344563;
}

.max-h-modal-small {
  height: 20vh;
}

.info-modal-small {
  height: 40vh;
}

.font-size-small {
  font-size: 0.9em;
}

.img-phone-small {
  max-width: 20%;
  margin-left: -4%;
  max-height: 70%;
  margin-bottom: -1%;
}

.img-desktop-phone {
  height: 100%;
}

.modal-tech {
  font-size: 0.8em;
}

@media (max-width: 600px) {
  .modal-title {
    font-size: 1.75em;
  }
}

/* About elements */ 

.bg-about-img {
  background-repeat: no-repeat;
  background-position: right;
  width: 50vw;
  height: 70vh;
  background-position: right;
}

.bg-about-img-mobile {
  background-repeat: no-repeat;
  background-position: right -180px bottom -80px;
  background-size: 325px 335px;
}

.about-left-desktop {
  margin-left: 5%;
}

.line-separator-white {
  width: 90%;
  height: 1px;
  position: relative;
  border-bottom: 1px solid white;
  margin-left: 5%;
}

@media (max-width: 1170px) {
  .bg-about-img {
    background-position: -15%;
  }
}

